@startuml

title __LOGIN's Class Diagram__\n

  namespace Login {
    class Login.DBOpenHelperUser {
        - db : SQLiteDatabase
        + DBOpenHelperUser()
        + add()
        + deleteAll()
        + deleteTable()
        + getAllData()
        + onCreate()
        + onUpgrade()
        + updata()
    }
  }
  

  namespace Login {
    class Login.RegisterActivity {
        + s : ArrayList<String>
        ~ n : String
        ~ r : int
        - mBtRegisteractivityRegister : Button
        - mEtRegisteractivityPassword1 : EditText
        - mEtRegisteractivityPassword2 : EditText
        - mEtRegisteractivityUsername : EditText
        - mIvRegisteractivityBack : ImageView
        + onClick()
        + setRandomID()
        # onCreate()
        - initView()
    }
  }
  

  namespace Login {
    class Login.User {
        - IDNumber : int
        - name : String
        - password : String
        + User()
        + getIDNumber()
        + getName()
        + getPassword()
        + setIDNumber()
        + setName()
        + setPassword()
        + toString()
    }
  }
  

  namespace Login {
    class Login.loginActivity {
        + c : String
        + s : ArrayList<String>
        {static} + userID : int
        {static} + userName : String
        ~ homeButton : ImageView
        ~ mBtLoginactivityCustomer : TextView
        ~ v : TextView
        - mBtLoginactivityLogin : Button
        - mBtLoginactivityback : ImageView
        - mEtLoginactivityPassword : EditText
        - mEtLoginactivityUsername : EditText
        - mTvLoginactivityRegister : TextView
        + onClick()
        # onCreate()
        - initView()
    }
  }
  

  Login.DBOpenHelperUser -up-|> android.database.sqlite.SQLiteOpenHelper
  Login.RegisterActivity .up.|> android.view.View.OnClickListener
  Login.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Login.RegisterActivity o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Login.RegisterActivity o-- Login.DBOpenHelperUser : mDBOpenHelperUser
  Login.loginActivity .up.|> android.view.View.OnClickListener
  Login.loginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Login.loginActivity o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Login.loginActivity o-- Login.DBOpenHelperUser : mDBOpenHelperUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
